# CompanyDKG

./: .gitignore  README.md  dkg_interactive.html  pyproject.toml  requirements.txt
data/: us_pharma_dkg.json  world_state.json
demos/: demo_decide.py  demo_query.py  demo_visualize.py
notebooks/: explore.ipynb
src/dkg/: decision_engine.py  graph_builder.py  queries.py  schema.py  visualize.py
tests/: test_dkg.py
