[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mckesson-dkg"
version = "0.1.0"
description = "A toy decision knowledge graph for the McKesson US Pharma BU."
requires-python = ">=3.10"
dependencies = [
  "networkx>=3.2",
  "pyvis>=0.3.2",
  "matplotlib>=3.7",
  "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "jupyter>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
